# Hackathon-II-TODO-APP

./: .gitignore  CLAUDE.md  PROCEDURES.md  QUICKSTART.md  README.md  pyproject.toml  railway.json
history/prompts/constitution/: 001-phase-i-constitution-creation.constitution.prompt.md
phase-1-console-app/: CLAUDE.md
phase-1-console-app/.claude/skills/: todo.add-feature.md  todo.debug.md  todo.refactor.md  todo.review.md  todo.test.md
phase-1-console-app/specs/001-cli-todo-app/: data-model.md  plan.md  research.md
phase-1-console-app/specs/002-cli-todo-app-enhanced/: plan.md  tasks.md
phase-1-console-app/src/: models.py
phase-1-console-app/tests/contract/: test_cli_interface.py
phase-1-console-app/tests/integration/: test_workflows.py
phase-1-console-app/tests/unit/: test_cli.py  test_models.py  test_storage.py
phase-2-web-app/: DEPLOYMENT.md  PROCEDURES.md  README.md
phase-2-web-app/.claude/agents/: todo-main-agent.md
phase-2-web-app/.claude/promptsForAgents/: promptagent.md
phase-2-web-app/backend/: .railwayignore  README.md  create_test_user.py  railway.json  verify_config.py
phase-2-web-app/backend/app/: auth.py  config.py  database.py
phase-2-web-app/backend/tests/: test_auth.py
phase-2-web-app/frontend/: README.md  package.json  tsconfig.json  vercel.json
phase-3-ai-chatbot/backend/: requirements.txt
specs/001-cli-todo-app/: spec.md
specs/002-cli-todo-app-enhanced/: spec.md
src/: cli.py  main.py  models.py  storage.py
tests/contract/: test_cli_interface.py
tests/unit/: test_models.py  test_storage.py
(+21 files in other folders)
