[project]
name = "cli-todo-app"
version = "0.1.0"
description = "Phase I: In-Memory Python Console Todo Application built with Spec-Driven Development"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# No runtime dependencies - stdlib only per spec
dependencies = [
    "colorama>=0.4.6",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    # Development tools (optional, not required for application)
]

[dependency-groups]
dev = [
    # Development dependencies (optional, not required for application)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Entry point for running the todo app
todo = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
